# routes/api.php
@@ -44,6 +44,9 @@ use Illuminate\Support\Facades\Route;
           Route::post('verifyId/{id}', 'Api\V1\UserController@verifyId');
           Route::post('varifyemail/{id}', 'Api\V1\UserController@varifyemail');
           Route::post('updateProfile/{id}', 'Api\V1\UserController@updateProfile');
+          Route::post('deleteUser/{id}', 'Api\V1\UserController@deleteUser');
+          Route::post('addPaymentDetails/{id}', 'Api\V1\UserController@addPaymentDetails');
+          Route::post('getCountries', 'Api\V1\UserController@getCountries');
       });
 
   });
